<b>2008-09-17</b>

* Added Google ads and implemented stack for tracking panes
* Filters for what can be entered in new airports
* Added support for private airports (non-IATA, non-ICAO)

<b>2008-09-14</b>

* Support for "private" (non-airline) flights added
* Airports, cities, IATA and ICAO codes capitalized when entering new airports
* Bugs in airport ICAO codes for stats fixed
* Airports now rendered busiest last (on top), with one extra size

<b>2008-09-13</b>

* Small bug in session handling fixed

<b>2008-09-12</b>

* Gamma release day!
